--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "SET NODE_ENV =development&& nodemon ./src/index.js",
-    "start": "npm run dev"
+    "dev": "SET NODE_ENV =development && nodemon ./src/index.js",
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
