--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node /src/index.js",
-    "dev": "node --watch /src/index.js"
+    "start": "node ./src/index.js",
+    "dev": "node --watch ./src/index.js"
   },
   "keywords": [],
   "author": "",
